-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 12, 13
-
Component/s: hotspot
-
b21
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8228945 | 12u-cpu | Qi Ao | P2 | Resolved | Fixed | master |
| JDK-8223826 | 12.0.2 | Qi Ao | P2 | Resolved | Fixed | b03 |
During dealing with JDK-8223599 and review thread[1], this issue was found:
Building targets 'clean hotspot' in configuration 'linux-x86_64-server-release'
Cleaning hotspot build artifacts ... done
Cleaning jdk build artifacts ... done
Cleaning bootcycle-build build artifacts ... done
Cleaning test-results build artifacts ... done
Cleaning test-support build artifacts ... done
Cleaning test build artifacts ... done
Cleaning buildtools build artifacts ... done
Cleaning support build artifacts ... done
Cleaning support/images build artifacts ... done
Cleaning images build artifacts ... done
Cleaning make-support build artifacts ... done
Cleaning test-make build artifacts ... done
Cleaning bundles build artifacts ... done
Cleaning buildjdk build artifacts ... done
Cleaned all build artifacts.
Compiling 1 files for BUILD_JFR_TOOLS
Creating hotspot/variant-server/tools/adlc/adlc from 13 file(s)
Compiling 2 files for BUILD_JVMTI_TOOLS
Creating support/modules_libs/java.base/server/libjvm.so from 913 file(s)
Creating hotspot/variant-server/libjvm/gtest/libjvm.so from 121 file(s)
Creating hotspot/variant-server/libjvm/gtest/gtestLauncher from 1 file(s)
/home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahCollectionSet.cpp: In constructor 'ShenandoahCollectionSet::ShenandoahCollectionSet(ShenandoahHeap*, char*, size_t)':
/home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahCollectionSet.cpp:58:3: error: 'MemTracker' has not been declared
MemTracker::record_virtual_memory_type(_map_space.base(), mtGC);
^
At global scope:
cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
gmake[3]: *** [/home/aoqi/jdk/build/linux-x86_64-server-release/hotspot/variant-server/libjvm/objs/shenandoahCollectionSet.o] Error 1
gmake[3]: *** Waiting for unfinished jobs....
gmake[2]: *** [hotspot-server-libs] Error 1
ERROR: Build failed for targets 'clean hotspot' in configuration 'linux-x86_64-server-release' (exit code 2)
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-server_libjvm_objs_shenandoahCollectionSet.o:
/home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahCollectionSet.cpp: In constructor 'ShenandoahCollectionSet::ShenandoahCollectionSet(ShenandoahHeap*, char*, size_t)':
/home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahCollectionSet.cpp:58:3: error: 'MemTracker' has not been declared
MemTracker::record_virtual_memory_type(_map_space.base(), mtGC);
^
At global scope:
cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
* All command lines available in /home/aoqi/jdk/build/linux-x86_64-server-release/make-support/failure-logs.
=== End of repeated output ===
No indication of failed target found.
Hint: Try searching the build log for '] Error'.
Hint: See doc/building.html#troubleshooting for assistance.
make[1]: *** [main] Error 1
make: *** [reconfigure] Error 2
[1] https://mail.openjdk.java.net/pipermail/hotspot-runtime-dev/2019-May/034234.html
Building targets 'clean hotspot' in configuration 'linux-x86_64-server-release'
Cleaning hotspot build artifacts ... done
Cleaning jdk build artifacts ... done
Cleaning bootcycle-build build artifacts ... done
Cleaning test-results build artifacts ... done
Cleaning test-support build artifacts ... done
Cleaning test build artifacts ... done
Cleaning buildtools build artifacts ... done
Cleaning support build artifacts ... done
Cleaning support/images build artifacts ... done
Cleaning images build artifacts ... done
Cleaning make-support build artifacts ... done
Cleaning test-make build artifacts ... done
Cleaning bundles build artifacts ... done
Cleaning buildjdk build artifacts ... done
Cleaned all build artifacts.
Compiling 1 files for BUILD_JFR_TOOLS
Creating hotspot/variant-server/tools/adlc/adlc from 13 file(s)
Compiling 2 files for BUILD_JVMTI_TOOLS
Creating support/modules_libs/java.base/server/libjvm.so from 913 file(s)
Creating hotspot/variant-server/libjvm/gtest/libjvm.so from 121 file(s)
Creating hotspot/variant-server/libjvm/gtest/gtestLauncher from 1 file(s)
/home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahCollectionSet.cpp: In constructor 'ShenandoahCollectionSet::ShenandoahCollectionSet(ShenandoahHeap*, char*, size_t)':
/home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahCollectionSet.cpp:58:3: error: 'MemTracker' has not been declared
MemTracker::record_virtual_memory_type(_map_space.base(), mtGC);
^
At global scope:
cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
gmake[3]: *** [/home/aoqi/jdk/build/linux-x86_64-server-release/hotspot/variant-server/libjvm/objs/shenandoahCollectionSet.o] Error 1
gmake[3]: *** Waiting for unfinished jobs....
gmake[2]: *** [hotspot-server-libs] Error 1
ERROR: Build failed for targets 'clean hotspot' in configuration 'linux-x86_64-server-release' (exit code 2)
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-server_libjvm_objs_shenandoahCollectionSet.o:
/home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahCollectionSet.cpp: In constructor 'ShenandoahCollectionSet::ShenandoahCollectionSet(ShenandoahHeap*, char*, size_t)':
/home/aoqi/jdk/src/hotspot/share/gc/shenandoah/shenandoahCollectionSet.cpp:58:3: error: 'MemTracker' has not been declared
MemTracker::record_virtual_memory_type(_map_space.base(), mtGC);
^
At global scope:
cc1plus: warning: unrecognized command line option "-Wno-misleading-indentation" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-implicit-fallthrough" [enabled by default]
cc1plus: warning: unrecognized command line option "-Wno-int-in-bool-context" [enabled by default]
* All command lines available in /home/aoqi/jdk/build/linux-x86_64-server-release/make-support/failure-logs.
=== End of repeated output ===
No indication of failed target found.
Hint: Try searching the build log for '] Error'.
Hint: See doc/building.html#troubleshooting for assistance.
make[1]: *** [main] Error 1
make: *** [reconfigure] Error 2
[1] https://mail.openjdk.java.net/pipermail/hotspot-runtime-dev/2019-May/034234.html
- backported by
-
JDK-8223826 Build fails with --with-jvm-features=-jfr and --disable-precompiled-headers
-
- Resolved
-
-
JDK-8228945 Build fails with --with-jvm-features=-jfr and --disable-precompiled-headers
-
- Resolved
-