8223651: Build fails with --with-jvm-features=-jfr and --disable-precompiled-headers

Reviewed-by: shade